--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,1 +1,8 @@
-README.md    @gbhise
+# This is a comment.
+# Each line is a file pattern followed by one or more owners.
+
+# Order is important; the last matching pattern takes the most
+# precedence. When someone opens a pull request that only
+# modifies JS files, only @js-owner and not the global
+# owner(s) will be requested for a review.
+*.js    @gbhise
