--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,8 +1,7 @@
 # This is a comment.
 # Each line is a file pattern followed by one or more owners.
-* gdarkunde@entrata.com
 # Order is important; the last matching pattern takes the most
 # precedence. When someone opens a pull request that only
 # modifies JS files, only @js-owner and not the global
 # owner(s) will be requested for a review.
-*.js    @gbhise @ganeshmd2015
+*  ganesh.bhise929@gmail.com gdarkunde@entrata.com
