--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -4,4 +4,4 @@
 # precedence. When someone opens a pull request that only
 # modifies JS files, only @js-owner and not the global
 # owner(s) will be requested for a review.
-*  ganesh.bhise929@gmail.com gdarkunde@entrata.com
+*.js @swapnilbhase
